test3-2022-11-24.log
regress/test3.fir:864443:16: error: firrtl.constant attribute has wrong sign
    tmp4132 <= cat(asSInt(UInt<28>("o1046442110")), inp_c.inp_hd.inp_oi)
               ^
regress/test3.fir:864443:16: note: see current operation: %8 = "firrtl.constant"() {value = -124107704 : si28} : () -> !firrtl.uint<28>
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 28.0336 seconds

  ----User Time----  ----Wall Time----  ----Name----
    4.6190 (  9.3%)    4.6190 ( 16.5%)  FIR Parser
    0.0000 (  0.0%)    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    0.0000 (  0.0%)    Parse OMIR
    3.5973 (  7.2%)    3.5973 ( 12.8%)    Parse modules
    0.9725 (  2.0%)    0.9725 (  3.5%)    Verify circuit
   44.8283 ( 90.2%)   23.1793 ( 82.7%)  'firrtl.circuit' Pipeline
    0.8707 (  1.8%)    0.8707 (  3.1%)    LowerFIRRTLAnnotations
    4.3490 (  8.8%)    2.3973 (  8.6%)    'firrtl.module' Pipeline
    1.3600 (  2.7%)    0.7678 (  2.7%)      DropName
    2.9889 (  6.0%)    1.6294 (  5.8%)      CSE
    0.0000 (  0.0%)    0.0000 (  0.0%)        (A) DominanceInfo
    0.0000 (  0.0%)    0.0000 (  0.0%)    InjectDUTHierarchy
    0.1584 (  0.3%)    0.0853 (  0.3%)    'firrtl.module' Pipeline
    0.1584 (  0.3%)    0.0853 (  0.3%)      LowerCHIRRTLPass
    0.2922 (  0.6%)    0.2922 (  1.0%)    InferWidths
    0.8924 (  1.8%)    0.8924 (  3.2%)    MemToRegOfVec
    1.4425 (  2.9%)    1.4425 (  5.1%)    InferResets
    0.1634 (  0.3%)    0.1634 (  0.6%)      (A) circt::firrtl::InstanceGraph
    0.2517 (  0.5%)    0.2517 (  0.9%)    WireDFT
    1.2858 (  2.6%)    0.7069 (  2.5%)    'firrtl.module' Pipeline
    1.2858 (  2.6%)    0.7069 (  2.5%)      FlattenMemory
    1.4451 (  2.9%)    1.4451 (  5.2%)    LowerFIRRTLTypes
    5.9687 ( 12.0%)    3.2468 ( 11.6%)    'firrtl.module' Pipeline
    4.5770 (  9.2%)    2.4445 (  8.7%)      ExpandWhens
    1.3903 (  2.8%)    0.8017 (  2.9%)      SFCCompat
    1.9485 (  3.9%)    1.9485 (  7.0%)    Inliner
    1.5875 (  3.2%)    0.8570 (  3.1%)    'firrtl.module' Pipeline
    1.5874 (  3.2%)    0.8569 (  3.1%)      RandomizeRegisterInit
    1.3755 (  2.8%)    1.3755 (  4.9%)    CheckCombCycles
    0.3030 (  0.6%)    0.3030 (  1.1%)      (A) circt::firrtl::InstanceGraph
    8.2997 ( 16.7%)    4.5829 ( 16.3%)    'firrtl.module' Pipeline
    7.9288 ( 16.0%)    4.3751 ( 15.6%)      Canonicalizer
    0.3709 (  0.7%)    0.2078 (  0.7%)      InferReadWrite
    0.1664 (  0.3%)    0.1664 (  0.6%)    PrefixModules
    0.0663 (  0.1%)    0.0663 (  0.2%)      (A) circt::firrtl::InstanceGraph
    0.0000 (  0.0%)    0.0000 (  0.0%)      (A) circt::firrtl::NLATable
    0.8697 (  1.8%)    0.8697 (  3.1%)    IMConstProp
    0.2352 (  0.5%)    0.2352 (  0.8%)  Rest
   49.6826 (100.0%)   28.0336 (100.0%)  Total

{
  totalTime: 28.076,
  maxMemory: 1064022016
}
